# RAG_youtube_itmo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml
app/: app.py  custom_embedding.py  utils.py
data/: bm25_result_desc.pkl  bm25_result_title.pkl  links.json  my_videos.txt  urls_of_channel_videos.txt  video_info.json  video_info_with_questions.json
data/index_storage/: docstore.json  index_store.json
data/index_storage_1024/: default__vector_store.json  docstore.json  index_store.json
data_pipelines/: index_pipeline.py  parser_transcribe.py
dataset/: sources.txt
dataset/chunks/: r51Jh2-ALcc_chunks.json  vY2puvzOcbA_chunks.json
dataset/meta/: video_info.json
dataset/raw/: r51Jh2-ALcc_transcript.json  vY2puvzOcbA_transcript.json
reports/: checkpoint_1_report.md  checkpoint_2_report.md  checkpoint_3_report.md
scripts/: clean_transcripts.py  get_metadata.py  get_transcripts.py  prepare_chunks.py
