[tool.poetry]
name = "rag_yt"
version = "0.1.0"
description = ""
authors = ["Pavel Shishkin"]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pre-commit = "^3.7.0"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
aiofiles = "23.1.0"
aiogram = "2.11.2"
aiohttp = "3.9.0"
aiosignal = "1.3.1"
aiostream = "0.5.2"
annotated-types = ">=0.6.0"
anyio = "3.7.1"
astroid = "2.15.6"
async-timeout = "4.0.3"
attrs = "23.1.0"
babel = "2.13.1"
beautifulsoup4 = "4.12.2"
certifi = "2023.7.22"
charset-normalizer = "3.2.0"
click = "8.1.7"
dataclasses-json = "0.6.0"
deprecated = "1.2.14"
dill = "0.3.7"
distro = "1.8.0"
exceptiongroup = "1.1.3"
frozenlist = "1.4.0"
fsspec = "2023.9.2"
greenlet = "3.0.1"
h11 = "0.14.0"
httpcore = "1.0.2"
httpx = "0.25.1"
idna = "3.4"
isort = "5.12.0"
joblib = "1.3.2"
jsonpatch = "1.33"
jsonpointer = "2.4"
langchain = "0.0.301"
langsmith = "0.0.40"
lazy-object-proxy = "1.9.0"
llama-index = "0.9.6.post2"
magic-filter = "1.0.12"
marshmallow = "3.20.1"
mccabe = "0.7.0"
multidict = "6.0.4"
mypy-extensions = "1.0.0"
nest-asyncio = "1.5.8"
nltk = "3.8.1"
numexpr = "2.8.6"
numpy = "1.26.0"
openai = "1.3.5"
packaging = "23.1"
pandas = "2.1.0"
platformdirs = "3.10.0"
pydantic-core = ">=2.10.0"
pylint = "2.17.5"
pymystem3 = "0.2.0"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
rank-bm25 = "0.2.2"
regex = "2023.8.8"
requests = "2.31.0"
schedule = "1.2.1"
six = "1.16.0"
sniffio = "1.3.0"
socksio = "1.0.0"
soupsieve = "2.5"
sqlalchemy = "2.0.21"
tenacity = "8.2.3"
tiktoken = "0.5.1"
tomli = "2.0.1"
tomlkit = "0.12.1"
tqdm = "4.66.1"
typing-inspect = "0.9.0"
typing-extensions = ">=4.12.2"
tzdata = "2023.3"
urllib3 = "1.26.5"
wrapt = "1.15.0"
yarl = "1.9.2"
black = "24.8.0"
ruff = "0.6.9"
mypy = "1.11.2"
pytest = "8.3.3"
setuptools = {version = ">=80.9.0,<81.0.0"}

[tool.poetry.group.dev.dependencies]
# Dev dependencies can be added here if needed

[tool.mypy]
python_version = "3.11"
plugins = "pydantic.mypy"
ignore_errors = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true
files = "app/"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_untyped_fields = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = "*/tests/*"
ignore_errors = true

[tool.black]
line-length = 120
skip-string-normalization = true
include = '\.pyi?$'
extend-exclude = '\.git|\.mypy_cache|\.ruff_cache|\.venv|venv|env|\.idea|.*\.pkl$|scripts/|dataset/|data/'

[tool.ruff]
select = ["E", "F", "I", "W", "ASYNC", "FIX001"]
ignore = ["E501"]
include = [
    "app/**"
]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "env",
    ".idea",
    "**/*.pkl"
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
line-length = 100
ignore-init-module-imports = true
target-version = "py311"

[tool.ruff.isort]
force-single-line = true
lines-after-imports = 2
known-first-party = [
    "app",
    "_cmd",
    "data",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
